<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <name>JBoss Web Services - CLI Management Tests</name>
  <groupId>org.jboss.ws</groupId>
  <artifactId>jbossws-cli-tests</artifactId>
  <version>1.0.0</version>
  <packaging>jar</packaging>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <jbossws-cxf.version>4.1.4.Final-redhat-1</jbossws-cxf.version>
    <junit.version>4.8.2</junit.version>
    <jboss720.version>7.2.1.Final-redhat-4</jboss720.version>
    <jbossws-common-tools.version>1.0.2-SNAPSHOT</jbossws-common-tools.version>
    <commons-io.version>2.0.1</commons-io.version>

<!--
    <surefire.security.args>-Djava.security.manager -Djava.security.policy=src/test/etc/tst.policy</surefire.security.args>
 -->
    <surefire.security.args></surefire.security.args>
    <surefire.memory.args>-Xmx768m -XX:MaxPermSize=450m</surefire.memory.args>
    <surefire.jdwp.args>-Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005</surefire.jdwp.args>
    <surefire.management.args>-Dcom.sun.management.jmxremote</surefire.management.args>
    <log4j.output.dir>${project.build.directory}</log4j.output.dir>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.jboss.ws.cxf</groupId>
      <artifactId>jbossws-cxf-server</artifactId>
      <version>${jbossws-cxf.version}</version>
      <scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>javax.mail</groupId>
					<artifactId>mail</artifactId>
				</exclusion>
			</exclusions>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>${commons-io.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.jboss.ws</groupId>
      <artifactId>jbossws-common-tools</artifactId>
      <version>${jbossws-common-tools.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.jboss.ws.cxf</groupId>
      <artifactId>jbossws-cxf-client</artifactId>
      <version>${jbossws-cxf.version}</version>
      <scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>javax.mail</groupId>
					<artifactId>mail</artifactId>
				</exclusion>
			</exclusions>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
		<dependency>
			<groupId>org.jboss.arquillian.junit</groupId>
			<artifactId>arquillian-junit-container</artifactId>
			<scope>test</scope>
		</dependency>
  </dependencies>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.jboss.arquillian</groupId>
				<artifactId>arquillian-bom</artifactId>
				<version>1.1.0.Final</version>
				<scope>import</scope>
				<type>pom</type>
			</dependency>
		</dependencies>
	</dependencyManagement>

  <!-- Build -->
  <build>
    <testResources>
      <testResource>
        <directory>src/test/resources</directory>
      </testResource>
      <testResource>
        <directory>src/test/filtered-resources</directory>
        <filtering>true</filtering>
      </testResource>
    </testResources>
  </build>
  <!-- Profiles -->
  <profiles>

		<profile>
			<id>arquillian-wildfly-managed</id>
      <activation>
        <property>
          <name>arquillian-wildfly-managed</name>
        </property>
      </activation>
			<dependencies>
				<dependency>
					<groupId>org.jboss.spec</groupId>
					<artifactId>jboss-javaee-6.0</artifactId>
					<version>1.0.0.Final</version>
					<type>pom</type>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>org.wildfly</groupId>
					<artifactId>wildfly-arquillian-container-managed</artifactId>
					<version>${wildfly800.version}</version>
					<scope>test</scope>
				</dependency>
				<dependency>
					<groupId>org.jboss.arquillian.protocol</groupId>
					<artifactId>arquillian-protocol-servlet</artifactId>
					<scope>test</scope>
				</dependency>
				<dependency>
					<groupId>org.wildfly</groupId>
					<artifactId>wildfly-cli</artifactId>
					<version>${wildfly800.version}</version>
					<scope>test</scope>
				</dependency>
			</dependencies>
		</profile>
		<profile>
			<id>arquillian-jboss720-managed</id>
      <activation>
        <property>
          <name>!arquillian-jboss720-managed</name>
        </property>
      </activation>
			<dependencies>
				<dependency>
					<groupId>org.jboss.spec</groupId>
					<artifactId>jboss-javaee-6.0</artifactId>
					<version>1.0.0.Final</version>
					<type>pom</type>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>org.jboss.as</groupId>
					<artifactId>jboss-as-arquillian-container-managed</artifactId>
					<version>7.2.0.Final</version>
					<scope>test</scope>
				</dependency>
				<dependency>
					<groupId>org.jboss.arquillian.protocol</groupId>
					<artifactId>arquillian-protocol-servlet</artifactId>
					<scope>test</scope>
				</dependency>
				<dependency>
					<groupId>org.jboss.as</groupId>
					<artifactId>jboss-as-cli</artifactId>
					<version>${jboss720.version}</version>
					<scope>test</scope>
				</dependency>
			</dependencies>
		</profile>

    <!--
    Name:  debug
    Descr: Enable remote debuging for tests
    -->
    <profile>
      <id>debug</id>
      <activation>
        <property>
          <name>debug</name>
        </property>
      </activation>
      <properties>
        <surefire.jvm.args>${surefire.security.args} ${surefire.memory.args} ${surefire.jdwp.args}</surefire.jvm.args>
      </properties>
    </profile>
    <profile>
      <id>no-debug</id>
      <activation>
        <property>
          <name>!debug</name>
        </property>
      </activation>
      <properties>
        <surefire.jvm.args>${surefire.security.args} ${surefire.memory.args}</surefire.jvm.args>
      </properties>
    </profile>
    <!--
    Name:  management
    Descr: Enable remote jmx management (useful to attach JConsole, for instance)
    -->
    <profile>
      <id>management</id>
      <activation>
        <property>
          <name>management</name>
        </property>
      </activation>
      <properties>
        <surefire.jvm.management.args>${surefire.management.args}</surefire.jvm.management.args>
      </properties>
    </profile>
    <profile>
      <id>no-management</id>
      <activation>
        <property>
          <name>!management</name>
        </property>
      </activation>
      <properties>
        <surefire.jvm.management.args> </surefire.jvm.management.args>
      </properties>
    </profile>

    <!--
    Name:  hudson
    Descr: Ignore test failures on hudson
    -->
    <profile>
      <id>hudson</id>
      <build>
        <plugins>
          <plugin>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
              <testFailureIgnore>true</testFailureIgnore>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <!--
    Name:  no-jboss-bind-address
    Descr: Set the default jboss.bind.address

    command line cannot overwrite pom properties
    http://jira.codehaus.org/browse/MNG-3546
    -->
    <profile>
      <id>no-jboss-bind-address</id>
      <activation>
        <property>
          <name>!jboss.bind.address</name>
        </property>
      </activation>
      <properties>
        <jboss.bind.address>localhost</jboss.bind.address>
      </properties>
    </profile>

    <profile>
      <id>default-mgmt-security</id>
      <activation>
        <property>
          <name>!jbossws.deployer.authentication.username</name>
        </property>
      </activation>
      <properties>
        <surefire.default-mgmt-serurity.args>-Djbossws.deployer.authentication.username=admin -Djbossws.deployer.authentication.password=admin</surefire.default-mgmt-serurity.args>
      </properties>
    </profile>
    <profile>
      <id>custom-mgmt-security</id>
      <activation>
        <property>
          <name>jbossws.deployer.authentication.username</name>
        </property>
      </activation>
      <properties>
        <surefire.default-mgmt-serurity.args> </surefire.default-mgmt-serurity.args>
      </properties>
    </profile>

		<profile>
      <id>endorsed-libs</id>
      <activation>
        <property>
          <name>!endorsed-libs</name>
        </property>
      </activation>
      <properties>
        <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
      </properties>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-dependency-plugin</artifactId>
            <version>2.3</version>
            <executions>
              <execution>
                <phase>pre-compile</phase>
                <goals>
                  <goal>copy</goal>
                </goals>
                <configuration>
                  <outputDirectory>${endorsed.dir}</outputDirectory>
                  <silent>true</silent>
                  <artifactItems>
                    <artifactItem>
                      <groupId>org.jboss.ws.cxf</groupId>
                      <artifactId>jbossws-cxf-factories</artifactId>
                      <version>${jbossws-cxf.version}</version>
                      <type>jar</type>
                    </artifactItem>
                  </artifactItems>
                </configuration>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>2.3.2</version>
            <configuration>
              <source>1.6</source>
              <target>1.6</target>
              <compilerArguments>
                <!-- tell compiler to use endorsed dir -->
                <endorseddirs>${endorsed.dir}</endorseddirs>
              </compilerArguments>
            </configuration>
          </plugin>
          <plugin>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
              <systemProperties>
                <property>
                  <name>jboss.bind.address</name>
                  <value>${jboss.bind.address}</value>
                </property>
                <property>
                  <name>java.protocol.handler.pkgs</name>
                  <value>org.jboss.net.protocol|org.jboss.vfs.protocol|org.jboss.virtual.protocol</value>
                </property>
                <property>
                  <name>org.jboss.security.ignoreHttpsHost</name>
                  <value>true</value>
                </property>
                <property>
                  <name>jboss.home</name>
                  <value>${jboss.home}</value>
                </property>
                <property>
                  <name>jbossws.integration.target</name>
                  <value>${jbossws.integration.target}</value>
                </property>
                <property>
                  <name>log4j.output.dir</name>
                  <value>${log4j.output.dir}</value>
                </property>
              </systemProperties>
              <excludes>
                 <exclude>org/jboss/test/ws/cli/CLIWebservicesWsdlPortArquillianTestCase.java</exclude>
              </excludes>
              <argLine>${surefire.jvm.args} ${surefire.jvm.management.args} ${surefire.default-mgmt-serurity.args} -Djava.endorsed.dirs=${endorsed.dir} -DallowConnectingToRunningServer=true</argLine>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

</project>
